# ChangeLog for dev-python/pyalsaaudio
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.27 2013/04/05 17:37:33 ago Exp $

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pyalsaaudio-0.7.ebuild:
  Stable for ppc, wrt bug #463451

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pyalsaaudio-0.7.ebuild:
  Stable for arm, wrt bug #463451

  30 Mar 2013; Agostino Sarubbo <ago@gentoo.org> pyalsaaudio-0.7.ebuild:
  Stable for x86, wrt bug #463451

  30 Mar 2013; Agostino Sarubbo <ago@gentoo.org> pyalsaaudio-0.7.ebuild:
  Stable for amd64, wrt bug #463451

  08 Jan 2013; Mike Frysinger <vapier@gentoo.org> pyalsaaudio-0.6.ebuild,
  pyalsaaudio-0.7.ebuild:
  Add some arm love for ChromiumOS.

*pyalsaaudio-0.7 (14 Feb 2012)

  14 Feb 2012; Patrick Lauer <patrick@gentoo.org> +pyalsaaudio-0.7.ebuild:
  Bump for #403007

  16 Nov 2011; Markos Chandras <hwoarang@gentoo.org> pyalsaaudio-0.6.ebuild:
  estrict Jython ABIs. Update LICENSE. Patch by Arfrever

  03 Feb 2010; Markus Meier <maekke@gentoo.org> pyalsaaudio-0.6.ebuild:
  amd64/x86 stable, bug #301398

  23 Jan 2010; Brent Baude <ranger@gentoo.org> pyalsaaudio-0.6.ebuild:
  stable ppc, bug 301398

*pyalsaaudio-0.6 (19 Dec 2009)

  19 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyalsaaudio-0.6.ebuild:
  Version bump.

  10 Oct 2009; nixnut <nixnut@gentoo.org> pyalsaaudio-0.5.ebuild:
  ppc stable #284990

  19 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyalsaaudio-0.2.ebuild:
  Fix dodoc (bug #285514).

  19 Sep 2009; Markus Meier <maekke@gentoo.org> pyalsaaudio-0.5.ebuild:
  amd64/x86 stable, bug #284990

  17 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyalsaaudio-0.5.ebuild:
  Update dependencies.

  25 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pyalsaaudio-0.5.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*pyalsaaudio-0.5 (10 Jul 2009)