@@ -1,26 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST pyalsaaudio-0.6.tar.gz 75155 SHA256 f048dd8ed7e2e400a90ba945b8dbff170448060617a7d5fd1d8ef292cf686c4d SHA512 b84cfa0cab6ac9c166b4881b71c6d99b1c368bbd158b83db7d2975fe5675dfbfae2dc1d89029260dd50c7a6b6a9f181a4c12ba06f381fc27a47490a4c6a327b8 WHIRLPOOL 09f2be8cdec7aa476ada59f88eeb1932c35e46e1cf5d32d9950f40a7d7a64558e496e0b23beacc683dd93ea4e3d92e9f5047d9604bbc9607a04a5618b040683f
 DIST pyalsaaudio-0.7.tar.gz 124577 SHA256 bbd5a9eb351def673800707f48e64680685f397e29da72ea4c9355e1a2b2a0fd SHA512 aea46ebc4a59c791e318e58fa7c307b73ea7e1eafdd6b2055df312e26e8d4868ca582b76dd2f203cb7c632a25e1bfd066f6f9522484aa5db51f404e5f99a38cc WHIRLPOOL 80dd871e66e21ebe34581a0c7ec846dea8b5c5ada93c0b0811334dcf2e90ab97e63852cc47a5355d03e546f335751e949d725f86bc3d26d76ea7aa8e4db9a718
 EBUILD pyalsaaudio-0.6.ebuild 1149 SHA256 1a139c3dd6d555ea8d97dcd492b845d7a1d1bb4f5b9389d29fa2eda60f40aa96 SHA512 08c26f2e698652e455f4fd940455779c27ffd22b35cdb3d07de8e58189c91e5275d513437e47881f217527a29dd88216f00c2ae43d25e1f3377134c523f9defd WHIRLPOOL 80123307e394f65dec4b487140c5c2b2fc7e3d445290aaef31c0800b29fcad3298c91e94053e7a446cf18d0200b8e25134a109da4605a44ee45445d81f4c0651
+EBUILD pyalsaaudio-0.7-r1.ebuild 1156 SHA256 87e0d10b1ec7e82597bb8d461ac3fd6d5abda60ddec8fb401cb364d2405c1e3e SHA512 c15f23d7e46497100f37f79e3571683c14486d15a856b5eb48e47fcc84f39d704a8871d7250082d5bfcf1b513f06aa0feda6cb5786a224d535d97eeff890f7a9 WHIRLPOOL 3f5998cbcf408e4f9c389482ebfb680e15868a1f14e163441e27ca74a5692de705fa530c6b1c510a1a68e1944d0c91296406cd9686b6763cd4f3d6087ef34834
 EBUILD pyalsaaudio-0.7.ebuild 1146 SHA256 7ebeeebf81a54190d3de673b1a7c784fdfaed6b8fc3d4f908f819f74271dab6e SHA512 41b30ede3e676ab6770a73771eecf2bb4fc87b42b77e02233cd463d6902605e81af2d6b352741f38f84cb31481b10b6ba374fde87244639d60466492f9abce3c WHIRLPOOL e00f15e4041f0c637c359db80ce0d8acefcdc1f0457b69ea77fd70b92b69fc45d0d4b14f71935d1a50a48161b20f3e6d07da50f8f7d3086c800cf973b151f4e3
-MISC ChangeLog 3357 SHA256 ba5a7c08d4d6bd14e550cf215eb549a79d021b1ee52eaf320791586f76b98a75 SHA512 0df5fae442417b6a216f8e57efc67b3e4877db7e33289c2de530d4e1620800ad30ec1eb02b6fe4948a698e345fffc41af50b8885f2ff1607492673025e2cba5b WHIRLPOOL b0452a92b1085229c52a45855290002dfc8c41428e578e75cd1608203952da860a1349498aa27c80779d9726bfac2f53ae47c60050e4ebca1ea47c989b5d1e33
+MISC ChangeLog 3545 SHA256 98c0fb834cf296551ebce1e0b5a7c5e7b927f703ef1df3581f9fbe46811d3751 SHA512 30c188d155e2ff1fa616f07e88dd96e833c813d094fa49f40377f4d6de5439f1db87c273df51dfc530227f1665caceb407d98c2e8571b019b87d8d5265c35325 WHIRLPOOL 7bfc37f1bc9472ec8ba2e79d5d24fe3c3a87801c1d58eb688ab95c64d8794a4118c329f3cde788ae9d0526267e88917f96bb8535a337f4c55e864c2ae5495333
 MISC metadata.xml 234 SHA256 6752ebf0a4f071eccf63b948a098f53eb5c88a76ae47a4ad5499dec1da8252b8 SHA512 a4e39a0aa61e4532fe77987ae1ea469c54486d9c6e6b5c80a07280402029803f5aa617186a14dd50869dbf0eb2e03fa20ac2ca0e60d3c310cc81f3485f183825 WHIRLPOOL b71a25b35ac95c346caeabacb1db5a86fb6775010a6f5f0578ac59da79d59d64d9f81c0dd7d3b559db8b7105f1e3103a2f2269517c84fe622872f602fc59c1b7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRXwtIAAoJELp701BxlEWfjGsP/2QHGJZNpTHmcnjV7ASe5319
-LFyc9ChVCFhZvma+M4bULPANN3vH7PiBGrucO49zB080sQF+xQTnjzJvG4p1wEiS
-pPfuoNjajeXkptBgu3TiY1BAqLiWaCVq0gfedDRmo9HMKGrKQveuCFjl+uWhUzI7
-oV/FcIMnZuZ5FuJKNIoY2DM1m3Wb9NrODdOqiF6JvCWVb/SzXjGT823Z+Ig/vMoU
-PBjpi5gE9n+/llSTX3XLBWnabDuZ5wzW2tX3mAowDbndY9wHfndXXbfTgnwb3cNn
-jevo/y1ypzFqOHdHzL81Unsl90IXVZJAcRwG/kMsrNU6C7QioD7JBrwnrI7VV4iI
-5A7x3U7vprnPZ2q5l1Sw2iR8xmC5qf8dG2tBwmQMA8YIMCyT67Oc2brwNwEQRbov
-usO+UNuQFOvSO0SjHJD836O2RJ1N0gPdWgR+Djnz/OcQjXZpxRmt+g+thTHFMpGN
-TfHoc1Tv+7NJ+SOiPKrhVKdvu+FNrMYWoKuti1gC8PUMZD7Vkp0a1i/bS55yVPaA
-RaT4uXaxRSTaN13FFpfmB/Gl1/0K16IzDaoKC0lMMPN1rWHNYiNl5j+SSs4Qz00P
-7zCS5aIm5rCJHDajfkTbxvvybjUefcWF7h9jB9OZEIZqbp4xvxWAD+lyRKnSV+Xf
-vcMv4eNIrKV/NXmKl42I
-=zRpc
+iQIcBAEBCAAGBQJRmXGYAAoJECRx6z5ArFrDY8sP/Av+BZcwMQo9POLxFc6t9lq5
+eRrVltfEdEjIu7jn5e7wX6ImmCz4welk4AaGrXikbOKWUic9bYmUnW9c3LYzSsDX
+CU02irJqhIuoLHHtO/4vU2CIn2RQHqADFBKG4sgMoDatUTohqWutjEFQ+LX4DBff
+JXh60YZVcyNA28Rsc732MmstIcWjSXulDz61k/SSz+6z8fF65gWj5BH8FHUTUsFl
+CmHVkdy03KrdR1StmDMEccSush55Xqu2WF9R06xijmO6JOaoAJIDnyxC33PhQ5Ta
+bB5neZRaCFNlRbjpyJpBc5AR0H9fpZQFHq1bAOEFkmppWDLak4y9fnADmLFApLOq
+hKSrKXcs7Q3WHaV2Crm2m1UxwiInGXBt3AyGI/UFQl2nIoMCQai0VNN9RPVx24gi
+RWPb0nXIPGG7q2tmvUKUx5v3zMWDj6685sbKGyCnrkkEfVlvS5Tivu1Tdcc326PH
+R1MKrVv5yoqK3u6J3MLM21ODXlcjP0YUM12FdxqfYa5spsE2fl42Rvu2lWF9tmtO
+t8XaQuys9lZBW8bKGKWyZ6yQyMFGPBJP0yvDFA3lwQh3r1Q6d4v4jf3nA04f9lpY
+n6Gohg1d1yqY+GkV+TKHbTf5aahyEhXyR8fmzbyy7Elfvzq/slK151i7TiYKXbg4
+k3INPRvrDijguWnKDnjs
+=vkgP
 -----END PGP SIGNATURE-----
