@@ -1,0 +1,52 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/pyalsaaudio-0.7-r1.ebuild,v 1.1 2013/05/20 00:41:54 prometheanfire Exp $
+
+EAPI=5
+
+PYTHON_COMPAT=( python{2_5,2_6,2_7} )
+
+inherit distutils-r1
+
+DESCRIPTION="A Python wrapper for the ALSA API"
+HOMEPAGE="http://www.sourceforge.net/projects/pyalsaaudio http://pypi.python.org/pypi/pyalsaaudio"
+SRC_URI="mirror://sourceforge/pyalsaaudio/${P}.tar.gz mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+
+LICENSE="PSF-2"
+SLOT="0"
+KEYWORDS="~amd64 ~arm ~ppc ~sparc ~x86"
+IUSE="doc"
+
+RDEPEND="media-libs/alsa-lib"
+DEPEND="${RDEPEND}
+	doc? ( >=dev-python/sphinx-0.6 )"
+RESTRICT="test"
+
+DOCS=( CHANGES README )
+
+src_compile() {
+	distutils_src_compile-r1
+
+	if use doc; then
+		cd doc
+		emake html || die "emake html failed"
+	fi
+}
+
+src_test() {
+	testing() {
+		PYTHONPATH="$(ls -d build-${PYTHON_ABI}/lib.*)" "$(PYTHON)" test.py -v
+	}
+	python_execute_function testing
+}
+
+src_install() {
+	distutils_src_install-r1
+
+	if use doc; then
+		dohtml -r doc/html/
+	fi
+
+	insinto /usr/share/doc/${PF}/examples
+	doins *test.py
+}
