@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pyalsaaudio
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.27 2013/04/05 17:37:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.28 2013/05/20 00:41:54 prometheanfire Exp $
+
+*pyalsaaudio-0.7-r1 (20 May 2013)
+
+  20 May 2013; Matthew Thode <prometheanfire@gentoo.org>
+  +pyalsaaudio-0.7-r1.ebuild:
+  updating pyalsaaudio-0.7 to eapi5 via revbump to r1
 
   05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pyalsaaudio-0.7.ebuild:
   Stable for ppc, wrt bug #463451
